--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "djunehor/laravel-revert-query",
     "description": "Log all model events and revert specific model event",
     "keywords": ["model","event","database","specific", "revert", "laravel"],
+	"type": "library",
+    "license": "MIT"
     "authors": [
         {
             "name": "Zacchaeus Bolaji",
