--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,33 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.0",
-        "illuminate/config": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
+        "php": "~7.0|~7.2"
+    },
+    "require-dev": {
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "3.8.*|4.*",
+        "phpunit/phpunit": "^8.0",
+        "illuminate/contracts": "^5.8.15|^6.0",
+        "illuminate/filesystem": "^5.8.15|^6.0",
+        "illuminate/support": "^5.8.15|^6.0",
+        "illuminate/database": "^5.8.15|^6.0"
+
     },
     "autoload": {
         "psr-4": {
-            "Djunehor\\EventRevert\\": "src"
+            "Djunehor\\EventRevert\\": "src/"
         },
         "files": [
             "src/Helpers/helpers.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Djunehor\\EventRevert\\Test\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit tests"
     },
     "extra": {
         "laravel": {
