Composer dump autoload optimize

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
             - ./vendor
 
       # run tests with phpunit or codecept
+      - run: composer dump-autoload -o
       - run: ./vendor/bin/phpunit --coverage-clover=coverage.clover
       - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - run: chmod +x ./cc-test-reporter
