Composer dump autoload optimize for scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -27,6 +27,7 @@ build:
     coverage:
       tests:
         override:
+          - command: composer dump-autoload -o
           - command: ./vendor/bin/phpunit --coverage-clover=coverage.clover
             coverage:
               file: coverage.clover   # <- Set this to where we find the coverage data.
